--- a/MODAMSWeb/Areas/Admin/Views/Departments/Index.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Departments/Index.cshtml
@@ -48,7 +48,7 @@
                             <tr>
                                 <th class="bg-transparent border-bottom-0 w-5">S.No</th>
                                 <th class="bg-transparent border-bottom-0">Department Name</th>
-                                <th class="bg-transparent border-bottom-0">Upper-level Department</th>
+                                <th class="bg-transparent border-bottom-0">Parent Department</th>
                                 <th class="bg-transparent border-bottom-0">Owner</th>
                                 <th class="bg-transparent border-bottom-0 no-btn">Action</th>
                             </tr>
