--- a/MODAMSWeb/Areas/Users/Views/Alerts/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Alerts/Index.cshtml
@@ -16,7 +16,7 @@
         <div class="card divShadow">
             <div class="card-body p-4">
                 <div class="d-flex align-items-center justify-content-between">
-                    <h4 class="m-0">Missing Documents Alerts</h4>
+                    <h4 class="m-0">Asset Management System Alerts</h4>
                     <select asp-for="@Model.DepartmentId" asp-items="@Model.DepartmentList"
                             class="form-control select2 form-select">
                         <option value="0">All Departments</option>
@@ -27,64 +27,114 @@
     </div>
     <div class="card">
         <div class="card-body project-list-table-container">
-            <div class="col-md-12">
-                <div class="table-responsive">
-                    <table id="tblAlerts" class="table text-nowrap mb-0 table-bordered border-top border-bottom project-list-main">
-                        <thead class="bg-primary-gradient ms-auto divShadow">
-                            <tr>
-                                <th class="text-white bg-transparent border-bottom-0 w-5" width="10%">S.No</th>
-                                <th class="text-white bg-transparent border-bottom-0">Category</th>
-                                <th class="text-white bg-transparent border-bottom-0">Make</th>
-                                <th class="text-white bg-transparent border-bottom-0">Asset Name</th>
-                                <th class="text-white bg-transparent border-bottom-0">Department</th>
-                            </tr>
-                        </thead>
-                        <tbody class="table-body">
-                            @{
-                                int nCounter = 0;
-                                string sCounter = "0";
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="card">
+                        <div class="card-status bg-primary br-tr-7 br-tl-7"></div>
+                        <div class="card-body">
+                            <div class="table-responsive">
+                                <table id="tblAlerts" class="table text-nowrap mb-0 table-bordered border-top border-bottom project-list-main">
+                                    <thead class="bg-primary-gradient ms-auto divShadow">
+                                        <tr>
+                                            <th class="text-white bg-transparent border-bottom-0 w-5" width="10%">S.No</th>
+                                            <th class="text-white bg-transparent border-bottom-0">Category</th>
+                                            <th class="text-white bg-transparent border-bottom-0">Make</th>
+                                            <th class="text-white bg-transparent border-bottom-0">Asset Name</th>
+                                            <th class="text-white bg-transparent border-bottom-0">Alert Type</th>
+                                            <th class="text-white bg-transparent border-bottom-0">Department</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody class="table-body">
+                                        @{
+                                            int nCounter = 0;
+                                            string sCounter = "0";
 
-                                foreach (var alert in Model.Alerts)
-                                {
-                                    nCounter++;
-                                    sCounter = (nCounter < 10) ? "0" + nCounter.ToString() : nCounter.ToString();
-                                    <tr>
-                                        <td class="text-muted text-center fs-15 fw-semibold">@sCounter.</td>
-                                        <td class="text-muted fs-15 fw-semibold">@alert.SubCategory</td>
-                                        <td class="text-muted fs-15 fw-semibold">@alert.Make</td>
-                                        <td class="text-muted fs-15 fw-semibold"><a asp-action="AssetInfo" asp-controller="Assets" asp-area="Users" asp-route-id="@alert.AssetId">@alert.Name</a></td>
-                                        <td class="text-muted fs-15 fw-semibold">@alert.Department</td>
-                                    </tr>
-                                }
-                            }
-                        </tbody>
-                    </table>
+                                            foreach (var alert in Model.Alerts)
+                                            {
+                                                nCounter++;
+                                                sCounter = (nCounter < 10) ? "0" + nCounter.ToString() : nCounter.ToString();
+                                                <tr>
+                                                    <td class="text-muted text-center fs-15 fw-semibold">@sCounter.</td>
+                                                    <td class="text-muted fs-15 fw-semibold">@alert.SubCategory</td>
+                                                    <td class="text-muted fs-15 fw-semibold">@alert.Make</td>
+                                                    <td class="text-muted fs-15 fw-semibold"><a asp-action="AssetInfo" asp-controller="Assets" asp-area="Users" asp-route-id="@alert.AssetId">@alert.Name</a></td>
+                                                    <td class="text-muted fs-15 fw-semibold">@alert.AlertType</td>
+                                                    <td class="text-muted fs-15 fw-semibold">@alert.Department</td>
+                                                </tr>
+                                            }
+                                        }
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                    
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-status bg-info br-tr-7 br-tl-7"></div>
+                        <div id="card-body-file" class="card-body container" style="height: 620px; display: flex; justify-content: center; align-items: center; width: 80%; margin: auto;">
+                            <canvas id="pieChartAlerts">
+                            </canvas>
+                        </div>
+                    </div>
                 </div>
             </div>
-            @*<div class="col-md-4">
-
-            </div>*@
         </div>
     </div>
 </div>
 @section scripts {
     <script>
         $(document).ready(function () {
-            //$("#hideMenu").click();
-            $('#tblAlerts').DataTable({
-                "createdRow": function (row, data, dataIndex) {
-                    if (dataIndex % 2 == 1) {
-                        $(row).addClass('bg-light-transparent');
-                    }
-                },
-            });
-            $('.even').addClass("bg-light-transparent");
-            $('.odd').removeClass("bg-light-transparent");
+            hideMenu();
+            makeDataTable($('#tblAlerts'), 1);
 
             $('.select2').select2();
             $('#DepartmentId').on("change", () => {
                 window.location.href = '/Users/Alerts/Index?departmentId=' + $("#DepartmentId").val();
             });
+            pieChartAlerts();
         });
+
+        const pieChartAlerts = () => {
+            var data = '@Html.Raw(Json.Serialize(Model.GetChartData()))';
+            var ctx = document.getElementById('pieChartAlerts').getContext('2d');
+
+            var labels = @Html.Raw(Json.Serialize(Model.GetChartData().Select(item => item.Type)));
+            var values = @Html.Raw(Json.Serialize(Model.GetChartData().Select(item => item.Count)));
+
+            var pieChart = new Chart(ctx, {
+                type: 'pie',
+                data: {
+                    labels: labels,
+                    datasets: [{
+                        data: values,
+                        backgroundColor: [
+                            'rgba(20, 99, 132, 0.7)',
+                            'rgba(200, 19, 12, 0.7)',
+                            'rgba(54, 162, 235, 0.7)',
+                            'rgba(255, 206, 86, 0.7)',
+                            'rgba(200, 106, 76, 0.7)',
+                            'rgba(115, 211, 56, 0.7)',
+                            'rgba(155, 51, 97, 0.7)',
+                            // Add more colors as needed
+                        ],
+                    }],
+                },
+                options: {
+                    plugins: {
+                        labels: {
+                            render: 'value',
+                            fontColor: '#ffffff',
+                            formatter: (value, context) => {
+                                return context.dataset.data[context.dataIndex];
+                            }
+                        },
+                    }
+                }
+            });
+            
+        }
+
     </script>
     }
